feat: apple client id 변경

--- a/src/main/resources/templates/apple.html
+++ b/src/main/resources/templates/apple.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta name="appleid-signin-client-id" content="com.draw.drawapp">
+    <meta name="appleid-signin-client-id" content="kr.kro.draw-nexters">
     <meta name="appleid-signin-redirect-uri" content="https://draw-nexters.kro.kr/auth/v1/local/apple/login">
     <meta name="appleid-signin-use-popup" content="true">
 </head>
