feat: 애플 로그인 버그 수정

--- a/src/main/resources/templates/apple.html
+++ b/src/main/resources/templates/apple.html
@@ -2,7 +2,7 @@
 <head>
     <meta name="appleid-signin-client-id" content="kr.kro.draw-nexters">
     <meta name="appleid-signin-redirect-uri" content="https://draw-nexters.kro.kr/auth/v1/local/apple/login">
-    <meta name="appleid-signin-use-popup" content="true">
+    <meta name="appleid-signin-use-popup" content="false">
 </head>
 <body>
 <div id="appleid-signin" data-color="black" data-border="true" data-type="sign in"></div>
